--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,6 +24,9 @@
                 <a class="nav-link" th:href="@{/api/search}">Search</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" th:href="@{/api/friends}">Friends</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link disabled" th:text="${'Welcome, ' +userInfo}"></a>
             </li>
             <li class="nav-item">
