--- a/src/main/resources/templates/friendsearch.html
+++ b/src/main/resources/templates/friendsearch.html
@@ -2,12 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>ImdbApp</title>
+    <title>IMDBApp</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">IMDBApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,50 +31,31 @@
                 <a class="nav-link" th:href="@{/logout}">LOGOUT</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" th:action="@{/api/search/results}">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search Movies" aria-label="Search" th:name="title">
+        <form class="form-inline my-2 my-lg-0" th:action="@{/api/friends/search}">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Profiles" aria-label="Search" th:name="username">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
 
-
-
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Image</th>
-        <th scope="col">Title</th>
-    </tr>
-    </thead>
-
-        <form th:action="@{/api/add}" th:object="${movieList}" method="post">
-            <button type="submit">Add checked movies</button>
-    <tr th:each="movie, movieData : *{results}">
-
-        <td class="align-middle"><img width="270px" height="400px" th:src="${movie.image}"></td>
-        <td class="align-middle" th:text="${movie.title}"></td>
-
-        <th:block th:switch="${movie.watched}">
-            <td th:case="false">
-                <input type="hidden" th:field="*{results[__${movieData.index}__].id}"/>
-                <input type="hidden" th:field="*{results[__${movieData.index}__].title}"/>
-                <input type="hidden" th:field="*{results[__${movieData.index}__].image}"/>
-                <label>
-                    <input class="align-middle" type="checkbox" th:field="*{results[__${movieData.index}__].checked}">
-                </label>Add to watched list</input>
-            </td>
-        <td th:case="true" class="align-middle">You have watched this movie</td>
-        </th:block>
-    </tr>
-
-    </form>
-</table>
-
-
-
-
-
+<div class= "container-fluid">
+    <div class="row">
+        <div class= "col-xs-4">
+            <table class="table">
+                <form th:action="@{addFriend}" th:object="${UserWrapper}" method="post">
+                    <button type="submit">Add Friends</button>
+                <tr th:each="friend, index : *{users}">
+                    <td th:text="${friend.userName}"></td>
+                    <td>
+                        <input type="hidden" th:field="*{users[__${index.index}__].userId}">
+                        <input type="checkbox" th:field="*{users[__${index.index}__].checked}">
+                    </td>
+                </tr>
+                </form>
+            </table>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
