--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,19 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-<form th:action="@{/login}" method="post">
+<form method="post" th:action="@{/login}">
     <p th:text="${msg}"></p>
     <div th:if="${param.error}">Invalid username or password</div>
     <br>
     <div th:if="${param.logout}">You have logged out</div>
-    <label for="username">Username:</label><input type="text" name="username" id="username"/>
+    <label for="username">Username:</label><input id="username" name="username" type="text"/>
     <br>
-    <label for="password">Password:</label><input type="password" name="password" id="password"/>
+    <label for="password">Password:</label><input id="password" name="password" type="password"/>
     <br>
     <input type="submit" value="Login">
 </form>
 <br>
-<p>New user? <a th:href="@{/register}"> Register here.</a> </p>
+<p>New user? <a th:href="@{/register}"> Register here.</a></p>
 
 </body>
 </html>
