--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 
-<form th:action="@{/register/add}" th:object="${newUser}" method="post">
+<form method="post" th:action="@{/register/add}" th:object="${newUser}">
     <ul th:each="msg : ${msgList}">
         <li th:text="${msg}"></li>
     </ul>
     <br>
-    <label for="username">Username:</label><input type="text" id="username" th:field="*{userName}"/>
+    <label for="username">Username:</label><input id="username" th:field="*{userName}" type="text"/>
     <br>
-    <label for="password">Password:</label><input type="password" id="password" th:field="*{passWord}"/>
+    <label for="password">Password:</label><input id="password" th:field="*{passWord}" type="password"/>
     <br>
     <input type="submit" value="Register">
 </form>
