--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>ImdbApp</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
+    <script crossorigin="anonymous"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">IMDBApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler"
+            data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -33,12 +38,12 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" th:action="@{/api/search/results}">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search Movies" aria-label="Search" th:name="title">
+            <input aria-label="Search" class="form-control mr-sm-2" placeholder="Search Movies" th:name="title"
+                   type="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
-
 
 
 <table class="table">
@@ -49,32 +54,29 @@
     </tr>
     </thead>
 
-        <form th:action="@{/api/add}" th:object="${movieList}" method="post">
-            <button type="submit">Add checked movies</button>
-    <tr th:each="movie, movieData : *{results}">
+    <form method="post" th:action="@{/api/add}" th:object="${movieList}">
+        <button type="submit">Add checked movies</button>
+        <tr th:each="movie, movieData : *{results}">
 
-        <td class="align-middle"><img width="270px" height="400px" th:src="${movie.image}"></td>
-        <td class="align-middle" th:text="${movie.title}"></td>
+            <td class="align-middle"><img height="400px" th:src="${movie.image}" width="270px"></td>
+            <td class="align-middle" th:text="${movie.title}"></td>
 
-        <th:block th:switch="${movie.watched}">
-            <td th:case="false">
-                <input type="hidden" th:field="*{results[__${movieData.index}__].id}"/>
-                <input type="hidden" th:field="*{results[__${movieData.index}__].title}"/>
-                <input type="hidden" th:field="*{results[__${movieData.index}__].image}"/>
-                <label>
-                    <input class="align-middle" type="checkbox" th:field="*{results[__${movieData.index}__].checked}">
-                </label>Add to watched list</input>
-            </td>
-        <td th:case="true" class="align-middle">You have watched this movie</td>
-        </th:block>
-    </tr>
+            <th:block th:switch="${movie.watched}">
+                <td th:case="false">
+                    <input th:field="*{results[__${movieData.index}__].id}" type="hidden"/>
+                    <input th:field="*{results[__${movieData.index}__].title}" type="hidden"/>
+                    <input th:field="*{results[__${movieData.index}__].image}" type="hidden"/>
+                    <label>
+                        <input class="align-middle" th:field="*{results[__${movieData.index}__].checked}"
+                               type="checkbox">
+                    </label>Add to watched list</input>
+                </td>
+                <td class="align-middle" th:case="true">You have watched this movie</td>
+            </th:block>
+        </tr>
 
     </form>
 </table>
-
-
-
-
 
 
 </body>
