--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -46,10 +46,25 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-6">
             <table class="table">
+                <th>
+                    <tr>Friends</tr>
+                </th>
                 <tr th:each="friend : ${friends}">
                     <td th:text="${friend.userName}"></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class="col-xs-6">
+            <table class="table">
+                <th>
+                    <tr>Requests</tr>
+                </th>
+                <tr th:each="request : ${requests}">
+                    <td th:text="${request.userName}"></td>
+                    <td><a th:href="@{/api/friends/accept(userId=${request.userId})}">Accept Request</a></td>
                 </tr>
             </table>
         </div>
